Using URI class, overriding port/credentials only if defined separately.